Resolved the Images and Spacing issue

--- a/src/components/UI/BrandSlider/BrandSlider.module.scss
+++ b/src/components/UI/BrandSlider/BrandSlider.module.scss
@@ -2,6 +2,7 @@
   width: 100vw; /* fill the screen */
   overflow: hidden;
   position: relative;
+  padding-block: 8px;
 }
 
 .sliderTrack {
